--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -12,7 +12,21 @@
     <div class="col-md-10 content">
       <div class="row">
         <div class="col-md-8">
-          <h4>Mapa komiwojażera</h4>
+          <div class="row">
+            <div class="col-md-4">
+              <h4>Mapa komiwojażera</h4>
+            </div>
+            <div class="col-md-8">
+              <div class="actionButtons">
+                <button type="button" mdbBtn color="primary" mdbWavesEffect (click)="fileInput.click()">Wczytaj układ</button>
+                <button type="button" mdbBtn color="secondary" mdbWavesEffect (click)="onSaveClick()">Eksportuj układ</button>
+                <input
+                  style="display: none"
+                  type="file" (change)="onFileChanged($event)"
+                  #fileInput>
+              </div>
+            </div>
+          </div>
           <app-salesmanmap #map></app-salesmanmap>
         </div>
         <div class="col-md-3 settings-view">
